feat(agent): close the five non-key defects and wire the page to the run endpoint
上一轮把状态写成了"唯一只差 key"。下面五项与模型凭据无关，其中三项在真实前后端
跑起来之前，单元测试全是绿的。

1) 模型首轮实际收到工具目录与参数定义。此前 PROTOCOL 只讲格式不含任何工具名，
   模型只能猜——看起来像"模型不会用工具"，实际是从没告诉过它。目录现在来自执行器
   的注册表，与工具自身校验参数用的是同一份定义。

2) 格式错误和非法筛选不再静默变成有效查询。此前"认不出来当作没筛选"也是猜——
   猜用户不在乎这个条件；tier=T9 返回全量结果，读起来和"T9 就是这些"没有区别。
   现在不认识的参数名、越界的枚举与 limit 一律返回失败观察并写出允许的取值。

3) FINISH 和 ASK 都不能输出无依据结论。叙述校验器管不了"凭空说话"：
   「这些岗位都挺适合你的」不含数字也不含判定词。新增：没有任何成功的工具结果时
   FINISH 整段丢弃；ASK 走同一套校验，且必须是问句——陈述句借追问的通道就绕过去了。

4) 内部逐岗评估计入共享预算。此前一次工具调用只扣 1，而 search_jobs 背后是 N 次
   评估，pending_confirmations 最多 100 次。预算对象现在交给工具，一岗一扣；
   不够时排名标注不完整，待确认清单直接拒绝给出。

5) 超时后的并发与客户端重试有界。cancel(true) 收不回卡在 socket 上的线程，
   无界线程池等于每来一个请求多一个永不归还的线程。改为上限 8 + SynchronousQueue
   + AbortPolicy；spring.ai.retry.max-attempts 由默认 10 降到 2，并补上
   connect/read 超时——没有超时，重试上限无从生效。

同时关闭交互断点：页面接入运行接口与会话续跑、刷新恢复、原键重算按钮、
单岗待确认事项，以及 resolveOrdinal / profileVersionSeenBy / advanceProfileVersion
和两个新接口上的候选人归属检查。接口能单独调用不等于用户走得通。

顺带：recompute 吞掉异常时补上 WARN 日志——吞异常是对的，不留痕就变成
"点重算没反应，谁也不知道为什么"。为此 career-application 引入 slf4j-api 门面。

验收：career-domain 194 / career-application 286 / career-infrastructure 405(52 跳过)
/ career-web 114(22 跳过) / career-ui 75，全部通过；真实浏览器 + 真实后端 +
真实 PostgreSQL：closed-loop 15/15、recompute-retry 8/8（真实注入重算失败并修复）。

仍未做到：没有模型凭据，还不能证明模型会依据不同工具结果选择不同下一步。
回放与脚本规划器都不是 Agent，它们证明的是路径接通与边界守得住。