@@ -8,6 +8,8 @@ import com.careeros.application.agent.AgentTooling.PlannerStep;
 import com.careeros.application.agent.AgentTooling.PlanningState;
 import com.careeros.application.agent.AgentTooling.ReadOnlyTool;
 import com.careeros.application.agent.AgentTooling.ToolCall;
+import com.careeros.application.agent.AgentTooling.ToolContext;
+import com.careeros.application.agent.AgentTooling.ToolSpec;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -25,10 +27,13 @@ import java.util.UUID;
  *       在这一层被拒绝，不是被劝阻。</li>
  *   <li><b>候选人由执行器绑定。</b> 规划器的 {@link ToolCall} 里没有候选人字段；
  *       即使它在参数里塞一个，也会被忽略——否则报出别人的 ID 就能读到别人的资料。</li>
- *   <li><b>共享预算。</b> 一次运行里所有工具调用共用一份额度，不是每个工具各有一份；
- *       用完就拒绝，并明说用完了。</li>
+ *   <li><b>共享预算，按真实扇出计。</b> 一次运行里所有工具共用一份额度。一个单位是
+ *       "一次工具调用"或"一次逐岗评估"——预算对象直接交给工具，工具内部每评估一个岗位就扣一次。
+ *       只按工具调用次数计，模型调三次工具就能触发上百次评估，预算等于没有。</li>
  *   <li><b>步数上限。</b> 规划器可能永远不收敛——它只要一直要求调工具就行。
  *       步数上限保证运行一定结束，即使一次工具都没调（比如它反复要求同一个被拒的工具）。</li>
+ *   <li><b>收尾的话也要有依据。</b> FINISH 与 ASK 都要过叙述校验，且一次成功的工具结果都没有时，
+ *       FINISH 不许留下任何叙述。</li>
  * </ul>
  *
  * <p>每一步都留在轨迹里：调了什么、为什么、被拒的原因。事后要能看出它是依据结果选的路，
@@ -37,6 +42,12 @@ import java.util.UUID;
 public final class AgentExecutor {
     /** 规划器最多被问多少次。到顶即停，无论它还想做什么。 */
     public static final int DEFAULT_MAX_STEPS = 8;
+
+    /** 一次成功的工具结果都没有时，FINISH 的叙述被整段拒绝的理由。 */
+    static final String UNGROUNDED_FINISH = "没有任何成功的工具结果，这段收尾叙述没有依据";
+
+    /** ASK 不是问句时的拒绝理由。陈述句走 ASK 通道就绕开了"结论要有依据"。 */
+    static final String ASK_IS_NOT_A_QUESTION = "追问不是一个问句；结论不能借追问的通道发出";
 
     private static final AnswerNarrativeValidator NARRATIVE = new AnswerNarrativeValidator();
 
@@ -53,7 +64,7 @@ public final class AgentExecutor {
         for (ReadOnlyTool tool : tools == null ? List.<ReadOnlyTool>of() : tools) {
             registry.put(tool.name(), tool);
         }
-        this.tools = Map.copyOf(registry);
+        this.tools = java.util.Collections.unmodifiableMap(registry);
         if (maxSteps < 1) throw new IllegalArgumentException("maxSteps must be positive");
         this.maxSteps = maxSteps;
         this.callBudget = callBudget;
@@ -65,32 +76,38 @@ public final class AgentExecutor {
         if (question == null || question.isBlank()) throw new IllegalArgumentException("question is required");
 
         var budget = ToolCallBudget.of(callBudget);
+        var catalogue = catalogue();
         var observations = new ArrayList<Observation>();
         var trace = new ArrayList<TraceEntry>();
 
         for (int step = 0; step < maxSteps; step++) {
-            var state = new PlanningState(question, observations, Math.max(0, callBudget - budget.spent()));
+            var state = new PlanningState(question, observations,
+                Math.max(0, callBudget - budget.spent()), catalogue);
             PlannerStep next;
             try {
                 next = planner.next(state);
             } catch (RuntimeException failure) {
                 // 规划器坏了不该把整次运行变成 500：已经取到的观察仍然有用。
                 trace.add(TraceEntry.rejected("(planner)", "规划器抛出异常：" + failure.getClass().getSimpleName()));
-                return new AgentRun(Outcome.PLANNER_FAILED, null, null, observations, trace, budget.spent());
+                return finished(Outcome.PLANNER_FAILED, null, null, observations, trace, budget);
             }
             if (next == null) {
                 trace.add(TraceEntry.rejected("(planner)", "规划器没有给出下一步"));
-                return new AgentRun(Outcome.PLANNER_FAILED, null, null, observations, trace, budget.spent());
+                return finished(Outcome.PLANNER_FAILED, null, null, observations, trace, budget);
             }
             if (next instanceof PlannerStep.Finish finish) {
                 // 叙述在这里就校验，不等渲染阶段。带数值或判定词的叙述不能离开执行器，
                 // 否则调用方可能先把它用掉——比如记进日志或直接回给用户。
-                var checked = NARRATIVE.validateNarrative(finish.narrative());
-                return new AgentRun(Outcome.FINISHED, checked.accepted() ? finish.narrative() : null,
-                    null, observations, trace, budget.spent(), checked.violations());
+                var violations = checkFinish(finish.narrative(), observations);
+                return new AgentRun(Outcome.FINISHED, violations.isEmpty() ? finish.narrative() : null,
+                    null, observations, trace, budget.spent(), callBudget, violations);
             }
             if (next instanceof PlannerStep.AskUser ask) {
-                return new AgentRun(Outcome.ASKED_USER, null, ask.question(), observations, trace, budget.spent());
+                // 追问和收尾同样是模型直接说给用户听的话，所以走同一套校验。
+                // 只校验 FINISH 的话，"ASK 你这条线适配度不错，要继续看吗"就能整句绕过去。
+                var violations = checkAsk(ask.question());
+                return new AgentRun(Outcome.ASKED_USER, null, violations.isEmpty() ? ask.question() : null,
+                    observations, trace, budget.spent(), callBudget, violations);
             }
             var call = ((PlannerStep.CallTool) next).call();
             String why = ((PlannerStep.CallTool) next).why();
@@ -104,23 +121,65 @@ public final class AgentExecutor {
             if (!budget.tryConsume()) {
                 observations.add(Observation.failed(call.tool(), "本次调用预算已用完。"));
                 trace.add(TraceEntry.rejected(call.tool(), "超出共享调用预算"));
-                return new AgentRun(Outcome.BUDGET_EXHAUSTED, null, null, observations, trace, budget.spent());
+                return finished(Outcome.BUDGET_EXHAUSTED, null, null, observations, trace, budget);
             }
+            int before = budget.spent();
             Observation observation;
             try {
-                // 候选人由这里绑定，规划器给不了。
-                observation = tool.invoke(candidateId, call);
+                // 候选人和预算都由这里绑定，规划器给不了。
+                observation = tool.invoke(new ToolContext(candidateId, call, budget));
             } catch (RuntimeException failure) {
                 observation = Observation.failed(call.tool(),
                     "这个工具这次没能返回结果：" + failure.getClass().getSimpleName());
             }
             observations.add(observation);
-            trace.add(TraceEntry.called(call, why, observation.ok()));
+            trace.add(TraceEntry.called(call, why, observation.ok(), budget.spent() - before + 1));
         }
-        return new AgentRun(Outcome.STEP_LIMIT_REACHED, null, null, observations, trace, budget.spent());
+        return finished(Outcome.STEP_LIMIT_REACHED, null, null, observations, trace, budget);
+    }
+
+    /**
+     * 收尾叙述的校验。
+     *
+     * <p>除了叙述校验器那套规则，这里多一条：一次成功的工具结果都没有时，FINISH 不许留下叙述。
+     * 那种情况下模型说的任何"结论"都是凭空的——它连一条数据都没读到。
+     * 不含数字、不含判定词并不等于有依据："这些岗位都挺适合你的"两条都不违反。
+     */
+    private static List<String> checkFinish(String narrative, List<Observation> observations) {
+        var violations = new ArrayList<>(NARRATIVE.validateNarrative(narrative).violations());
+        if (observations.stream().noneMatch(Observation::ok)) violations.add(UNGROUNDED_FINISH);
+        return List.copyOf(violations);
+    }
+
+    /**
+     * 追问的校验。
+     *
+     * <p>追问允许在还没有任何工具结果时发出——"你说的杭州是指市区还是整个市？"本来就不需要依据。
+     * 但它必须真的是个问句，并且同样不许带数值、判定词或概率说法。
+     */
+    private static List<String> checkAsk(String question) {
+        var violations = new ArrayList<>(NARRATIVE.validateNarrative(question).violations());
+        if (question != null && !question.isBlank() && question.indexOf('？') < 0 && question.indexOf('?') < 0) {
+            violations.add(ASK_IS_NOT_A_QUESTION);
+        }
+        return List.copyOf(violations);
+    }
+
+    private AgentRun finished(Outcome outcome, String narrative, String question, List<Observation> observations,
+                              List<TraceEntry> trace, ToolCallBudget budget) {
+        return new AgentRun(outcome, narrative, question, observations, trace, budget.spent(), callBudget, List.of());
+    }
+
+    private List<ToolSpec> catalogue() {
+        return tools.values().stream().map(ToolSpec::of).toList();
     }
 
     public List<String> registeredTools() { return List.copyOf(tools.keySet()); }
+
+    /** 完整的工具目录。模型首轮收到的就是它，调用方也能拿去核对边界。 */
+    public List<ToolSpec> toolCatalogue() { return catalogue(); }
+
+    public int budgetLimit() { return callBudget; }
 
     public enum Outcome {
         /** 规划器自己收敛了，给出了叙述。 */
@@ -136,32 +195,37 @@ public final class AgentExecutor {
     }
 
     /**
-     * @param narrative 仅在 FINISHED 时有值；它还要过叙述校验器，这里不做判定
-     * @param question  仅在 ASKED_USER 时有值
+     * @param narrative   仅在 FINISHED 且叙述通过校验时有值
+     * @param question    仅在 ASKED_USER 且追问通过校验时有值
+     * @param budgetSpent 这次运行消耗的预算单位：工具调用次数 + 内部逐岗评估次数
+     * @param violations  收尾叙述或追问被拒的原因；非空表示上面那两个字段被清掉了
      */
     public record AgentRun(Outcome outcome, String narrative, String question,
-                           List<Observation> observations, List<TraceEntry> trace, int toolCallsSpent,
-                           List<String> narrativeViolations) {
+                           List<Observation> observations, List<TraceEntry> trace, int budgetSpent,
+                           int budgetLimit, List<String> violations) {
         public AgentRun {
             observations = List.copyOf(observations == null ? List.of() : observations);
             trace = List.copyOf(trace == null ? List.of() : trace);
-            narrativeViolations = List.copyOf(narrativeViolations == null ? List.of() : narrativeViolations);
+            violations = List.copyOf(violations == null ? List.of() : violations);
         }
-        AgentRun(Outcome outcome, String narrative, String question, List<Observation> observations,
-                 List<TraceEntry> trace, int toolCallsSpent) {
-            this(outcome, narrative, question, observations, trace, toolCallsSpent, List.of());
-        }
-        /** 叙述被拒时 {@code narrative} 为空；调用方回落到确定性事实块。 */
-        public boolean narrativeRejected() { return !narrativeViolations.isEmpty(); }
+        /** 叙述或追问被拒时对应字段为空；调用方回落到确定性事实块。 */
+        public boolean textRejected() { return !violations.isEmpty(); }
+        /** 这次回答背后有几条成功的工具结果。零就是没有依据，调用方应当据此收紧展示。 */
+        public long groundedIn() { return observations.stream().filter(Observation::ok).count(); }
     }
 
-    /** 一步轨迹。被拒的步骤也要留下来——看不见的拦截等于没拦截。 */
-    public record TraceEntry(String tool, Map<String, String> arguments, String why, boolean accepted, String reason) {
-        static TraceEntry called(ToolCall call, String why, boolean ok) {
-            return new TraceEntry(call.tool(), call.arguments(), why, true, ok ? "ok" : "工具返回失败");
+    /**
+     * 一步轨迹。被拒的步骤也要留下来——看不见的拦截等于没拦截。
+     *
+     * @param budgetUnits 这一步实际花掉的预算单位；被拒的步骤为 0
+     */
+    public record TraceEntry(String tool, Map<String, String> arguments, String why, boolean accepted,
+                             String reason, int budgetUnits) {
+        static TraceEntry called(ToolCall call, String why, boolean ok, int budgetUnits) {
+            return new TraceEntry(call.tool(), call.arguments(), why, true, ok ? "ok" : "工具返回失败", budgetUnits);
         }
         static TraceEntry rejected(String tool, String reason) {
-            return new TraceEntry(tool, Map.of(), null, false, reason);
+            return new TraceEntry(tool, Map.of(), null, false, reason, 0);
         }
     }
 }
